<resources>
    <string name="app_name">ExpendEase</string>
    <string name="cac_khoan_chi">Cac khoan chi:</string>
    <string name="total_fixes">1.500.500</string>
    <string name="unit_money">đ</string>
    <string name="start_day">Ngày bắt đầu</string>
    <string name="end_day">Ngày kết thúc</string>
    <string name="btn_find">Tìm kiếm</string>
    <string name="btn_add">Thêm</string>
    <string name="btn_update">Sửa</string>
    <string name="btn_delete">Xóa</string>
    <string name="choose_day">Chọn ngày</string>
    <string name="datetime">Ngày:</string>
    <string name="content">Nội dung</string>
    <string name="lbl_content">Nội dung:</string>
    <string name="amount_money">Số tiền</string>
    <string name="icon">breakfast</string>
    <string name="breakfast">breakfast</string>
    <string name="total_expense">Tổng Chi:</string>
    <string name="_100_000">100.000</string>
    <string name="balance">Số dư hiện tại:</string>
    <string name="_1_000_000">100.000.000</string>
    <string name="find_expenses_by_date">Tìm kiếm chi tiêu theo ngày</string>
    <string name="_28">28</string>
    <string name="today">Today</string>
    <string name="_11_2023">11/2023</string>
    <string name="_50_000">-50.000</string>
    <string name="_50_000_">-50.000</string>
    <string name="mama_send">Tiền má gửi</string>
    <string name="DD">đ</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="select_day">Chọn ngày</string>
    <string name="history">Lịch sử</string>
    <string name="home">Trang chủ</string>
    <string name="account">Tài khoản</string>
    <string name="lblTotalMoney">Tổng tiền</string>
    <string name="spending">Các khoản chi tiêu</string>
    <string name="account_txt">Tài khoản</string>
    <string name="total_money">Tổng tiền</string>
    <string name="expense">Các khoản chi cố định</string>
    <string name="add_new_total">Thêm khoản mới</string>
    <string name="add_new_expense">Thêm khoản chi mới</string>
    <string name="fixed_expense">Các khoản chi cố định</string>
    <string name="home_page">Trang chủ</string>
    <string name="balance_txt">Số tiền</string>
    <string name="limit_expense">Hạn mức chi tiêu : </string>
    <string name="used">Đã sử dụng : </string>
    <string name="pass_limit">Đã sử dụng quá hạn mức</string>
    <string name="note">Với số tiền này bạn có thể thể sử dụng thêm ... ngày</string>
    <string name="ti_n_i_n">power_money</string>
    <string name="food">Ăn Uống</string>
    <string name="notify">Bạn đã sử dụng quá mức cho phép</string>
    <string name="notify_ok">Trong mức cho phép</string>
    <string name="prev_money">Số dư tháng trước:</string>
    <string name="find">Tìm kiếm</string>
    <string name="cancel">Hủy</string>
    <string name="btn_cancel">Hủy</string>
    <string name="save">Lưu</string>
</resources>