<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lblTotalMoney"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalMoney"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/total_fixes"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/unit_money"
                android:textColor="@color/primary"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#fff"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnStartDay"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/btn_height"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_outline"
                        android:text="@string/start_day"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnEndDay"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/btn_height"
                        android:layout_weight="1"
                        android:background="@drawable/button_outline"
                        android:text="@string/end_day"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFindItem"
                    android:layout_width="167dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/button_border"
                    android:text="@string/btn_find"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>
</LinearLayout>